--- a/Demo.WinUI/Demo.XamlIslands.CustomUwpControls/Demo.XamlIslands.CustomUwpControls.csproj
+++ b/Demo.WinUI/Demo.XamlIslands.CustomUwpControls/Demo.XamlIslands.CustomUwpControls.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{3335BE30-2511-4E85-882A-C89D4C87C51B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Testing.CustomUwpControls</RootNamespace>
-    <AssemblyName>Testing.CustomUwpControls</AssemblyName>
+    <RootNamespace>Demo.XamlIslands.CustomUwpControls</RootNamespace>
+    <AssemblyName>Demo.XamlIslands.CustomUwpControls</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.18362.0</TargetPlatformVersion>
